--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,29 @@
-<!DOCTYPE html>
-  <html>
+<!doctype html>
+<html>
     <head>
-      <style>
-        button {
-          height: 30px;
-          width: 30px;
-          outline: none;
-        }
-      </style>
+        <title>Title</title>
+        <style>
+            body {
+                font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+                font-size: 100%;
+            }
+            #status {
+                white-space: pre;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                max-width: 400px;
+            }
+            button {
+              outline: none;
+            }
+        </style>
     </head>
     <body>
-        <button id="changeColor"></button>
-        <script src="popup.js"></script>
+        <button id="run_btn">Extract profile info</button>
+        <button id="import_btn" hidden=true>Looks good!</button>
+        <p id="text">ayy</p>
+        <p id="count">0</p>
     </body>
-  </html>
+    <script src="jquery-3.5.1.min.js"></script>
+    <script src="popup.js"></script>
+</html>
