minor code cleaning

--- a/popup.html
+++ b/popup.html
@@ -21,8 +21,7 @@
     <body>
         <button id="run_btn">Extract profile info</button>
         <button id="import_btn" hidden=true>Looks good!</button>
-        <p id="text">ayy</p>
-        <p id="count">0</p>
+        <p id="text" hidden=true></p>
     </body>
     <script src="jquery-3.5.1.min.js"></script>
     <script src="popup.js"></script>
