Auto-import profile on press of extension button
 - manifest.json: Use page_action, which disables the extension on
   most pages. Change key binding for the action to Ctrl+Shift+Q.

 - utils.js: Send message to activate the extension icon

 - background.js: Receive message to activate the extension icon

 - popup.html: Hide the "extract" button by default

 - popup.js: When not debugging, scrape and import automatically

--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
         </style>
     </head>
     <body>
-        <button id="run_btn">Extract profile info</button>
+        <button id="run_btn" hidden=true>Extract profile info</button>
         <button id="import_btn" hidden=true>Looks good!</button>
         <p id="text" hidden=true></p>
     </body>
