Allow toggling of debug mode in extension options menu

--- a/options.html
+++ b/options.html
@@ -12,11 +12,10 @@
     </head>
     <body>
       <div>
-          <p>Debugging Mode: <strong id="status"></strong></p>
+          <p>Debugging is currently <strong id="status"></strong></p>
       </div>
       <div id="buttonDiv">
-          <button id="enable">TURN ON</button>
-          <button id="disable">TURN OFF</button>
+          <button id="toggle"></button>
       </div>
     </body>
     <script src="jquery-3.5.1.min.js"></script>
