--- a/options.html
+++ b/options.html
@@ -20,7 +20,7 @@
     <button id="toggle"></button>
   </div>
 </body>
-<script src="jquery-3.5.1.min.js"></script>
+<script src="lib/jquery-3.5.1.min.js"></script>
 <script src="options.js"></script>
 
 </html>
