--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
     <button id="import_btn" hidden=true>Looks good!</button>
     <p id="text" hidden=true></p>
 </body>
-<script src="jquery-3.5.1.min.js"></script>
+<script src="lib/jquery-3.5.1.min.js"></script>
 <script src="popup.js"></script>
 
 </html>
