Allow override of 'resume not loaded' errors

--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
         body {
             font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
             font-size: 100%;
+            min-width: 150px;
         }
 
         #status {
@@ -26,6 +27,8 @@
     <button id="run_btn" hidden=true>Extract profile info</button>
     <button id="import_btn" hidden=true>Looks good!</button>
     <p id="text" hidden=true></p>
+    <button id="ok_btn" hidden=true>OK</button>
+    <button id="override_btn" hidden=true>Import anyway</button>
 </body>
 <script src="lib/jquery-3.5.1.min.js"></script>
 <script src="popup.js"></script>
